--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id" content="1029747393830-kfqdq1b5d6tsuf1eo0m3jirl6ppeps6o.apps.googleusercontent.com">
 
     <!-- Latest compiled and minified CSS & JS -->
     
