--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,12 +9,6 @@
 <script>
     function onSignIn(googleUser) {
         var id_token = googleUser.getAuthResponse().id_token;
-        var xhr = new XMLHttpRequest();
-        xhr.open('POST', '/login');
-        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-        xhr.onload = function () {
-            console.log('Signed in as: ' + xhr.responseText);
-        };
-        xhr.send('idtoken=' + id_token);
+        $.post('/login', id_token);
     }
 </script>
