--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,6 +10,6 @@
     function onSignIn(googleUser) {
         var profile = googleUser.getBasicProfile();
         console.log('ID: ' + profile.getId());
-        {{!-- $.post('/login', profile.getId()); --}}
+        // $.post('/login', profile.getId());
     }
 </script>
