--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,6 +9,6 @@
 <script>
     function onSignIn(googleUser) {
         var profile = googleUser.getBasicProfile();
-        $.post('/login', profile.getId());
+        $.get('/create', profile.getId());
     }
 </script>
