--- a/views/stats.handlebars
+++ b/views/stats.handlebars
@@ -18,29 +18,29 @@
                         <p><img src="../images/trophy.png"></p>
                     </a>
                 </li>
-                <li role="presentation">
+                <!--<li role="presentation">
                     <a href="#skills" role="tab" data-toggle="tab">
                         <h3>SKILLS</h3>
                         <p><img src="../images/anvil.png"></p>
                     </a>
-                </li>
+                </li> -->
                 <li role="presentation">
                     <a href="#items" role="tab" data-toggle="tab">
                         <h3>ITEMS</h3>
                         <p><img src="../images/sword.png"></p>
                     </a>
                 </li>
-                <li role="presentation">
+                <!-- <li role="presentation">
                     <a href="#spells" role="tab" data-toggle="tab">
                         <h3>SPELLS</h3>
                         <p><img src="../images/magic.png"></p>
                     </a>
+                </li> -->
                 <li role="presentation">
                     <a href="#charSheet" role="tab" data-toggle="tab">
                         <h3>Overview</h3>
                         <p><img src="../images/heart.png"></p>
                     </a>
-                </li>
                 </li>
             </ul>
         </div>
@@ -65,7 +65,7 @@
                             <br>
                             <select id="traits" multiple>
                                 {{#each char.traits}}
-                                <option value="{{name}}">{{name}}</option>
+                                <option value="{{raceName}}">{{name}}</option>
                                 {{/each}}
                             </select>
                         </div>
@@ -214,22 +214,22 @@
                 <div class="col-sm-1"></div>
                 <div class="col-sm-10 text-center">
                     <label for="#charName">Name</label>
-                    <input type="text" id="charName" placeholder="Character Name" value={{char.descriptive.name}} />
+                    <input type="text" id="charName" placeholder="Character Name" value="{{char.descriptive.name}}" />
                     <br>
                     <label for="charAlignment">Alignment</label>
-                    <input type="text" id="charAlignment" placeholder="LG" value={{char.descriptive.alignment}}
+                    <input type="text" id="charAlignment" placeholder="LG" value="{{char.descriptive.alignment}}"
                         maxlength="2" style="width: 30px" />
                     <label for="charHeight">Height</label>
                     <input type="text" id="charHeight" placeholder="5'10&quot;"
                         value="{{char.descriptive.height}}&quot;" maxlength="10" style="width: 50px" />
                     <label for="charWeight">Weight</label>
-                    <input type="text" id="charWeight" placeholder="150lb" value={{char.descriptive.weight}}
+                    <input type="text" id="charWeight" placeholder="150lb" value="{{char.descriptive.weight}}"
                         maxlength="6" style="width: 50px" />
                     <label for="charHair">Hair</label>
-                    <input type="text" id="charHair" placeholder="Black" value={{char.descriptive.hair}}
+                    <input type="text" id="charHair" placeholder="Black" value="{{char.descriptive.hair}}"
                         style="width: 60px" />
                     <label for="charEyes">Eyes</label>
-                    <input type="text" id="charEyes" placeholder="Blue" value={{char.descriptive.eyes}}
+                    <input type="text" id="charEyes" placeholder="Blue" value="{{char.descriptive.eyes}}"
                         style="width: 60px" />
                 </div>
             </div>
