--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,17 @@
 <body>
-    <div class="col-sm-5"></div>
-    <div class="col">
-        <div class="col g-signin2" data-onsuccess="onSignIn"></div>
+    <div class="row">
+        <div class="col-sm-12">
+            <h1 style="text-align: center; color:darkslategrey">HELLO PATHFINDER!</h1>
+            <h3 style="text-align: center; color:darkslategrey">Please login to begin your adventure</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+                <div class="col-sm-4"></div>
+                <div class="col g-signin2" data-onsuccess="onSignIn"></div>
+            </div>
+       
     </div>
 </body>
 
@@ -9,6 +19,6 @@
 <script>
     function onSignIn(googleUser) {
         var profile = googleUser.getBasicProfile();
-        window.location.pathname = `/create/${profile.getId()}`;
+        $.get(`/create/${profile.getId()}`);
     }
 </script>
