--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,18 +7,27 @@
     </div>
     <div class="row">
         <div class="col-sm-4"></div>
-            <div class="col-sm-4">
-                <div class="col-sm-4"></div>
-                <div class="col g-signin2" data-onsuccess="onSignIn"></div>
-            </div>
-       
+        <div class="col-sm-4">
+            <div class="col-sm-4"></div>
+            <div class="col g-signin2" data-onsuccess="onSignIn"></div>
+        </div>
+
     </div>
 </body>
 
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <script>
     function onSignIn(googleUser) {
-        var profile = googleUser.getBasicProfile();
-        window.location.pathname = `/create/${profile.getId()}`;
+        //        var profile = googleUser.getBasicProfile();
+        var id_token = googleUser.getAuthResponse().id_token;
+        var xhr = new XMLHttpRequest();
+        xhr.open('POST', '/login');
+        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+        xhr.onload = function () {
+            console.log('Signed in as: ' + xhr.responseText);
+        };
+        xhr.send('idtoken=' + id_token).then((res) => {
+            window.location.pathname = `/editor/${res}`
+        });
     }
 </script>
