Testing a fix for Google Sign-in security problem

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,13 +20,7 @@
     function onSignIn(googleUser) {
         //        var profile = googleUser.getBasicProfile();
         var id_token = googleUser.getAuthResponse().id_token;
-        var xhr = new XMLHttpRequest();
-        xhr.open('POST', '/login');
-        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-        xhr.onload = function () {
-            console.log('Signed in as: ' + xhr.responseText);
-        };
-        xhr.send('idtoken=' + id_token).then((res) => {
+        $.post("/login", id_token).then((res) => {
             window.location.pathname = `/editor/${res}`
         });
     }
